raw/ZAHIRA NAJMA 6421 245150207111056/2024-11-14-08-39-37.ceg/compilation.txt
NT.java:21: error: illegal start of expression
    public static void main(String[] args) {
    ^
1 error
Not compiled
